feat: Update Google Maps API key and initial map view
Replaced the placeholder Google Maps API key with a valid one in `index.html`. Updated the initial center and zoom level in `App.tsx` to focus on Manhattan, providing a more specific starting point for exploration.

The `services/geminiService.ts` file was updated to use `GEMINI_API_KEY` instead of `API_KEY` for clarity. Additionally, the response schema for the Gemini API has been refined to include a `details` array for `HistoricalPlace`, allowing for more structured presentation of place-specific information in the `InfoPanel`.

The `InfoPanel` component now utilizes the `PlaceDetail` structure from `types.ts` to display information in a more organized and extensible way, including icons for each detail. The `MapComponent` was slightly adjusted to remove the explicit API key loading error message, as the key is now directly embedded. The loading spinner message has also been shortened for conciseness.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,11 +22,11 @@
       }
     </style>
     <!-- 
-      IMPORTANT: You must replace 'YOUR_GOOGLE_MAPS_API_KEY' with your own Google Maps JavaScript API key.
-      To get a key, visit the Google Cloud Console, create a project, and enable the "Maps JavaScript API".
-      For security, it's recommended to restrict your API key to your website's domain.
+      The Google Maps API Key has been inserted below. 
+      For production applications, it's recommended to manage this key securely 
+      and restrict its usage in the Google Cloud Console.
     -->
-    <script async src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=marker"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZfyoWi92qFStJmTTMW0Kgv3Fr4rPD4kA&libraries=marker"></script>
 <script type="importmap">
 {
   "imports": {
